<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"
    android:gravity="right"
    android:padding="6dip" >

    <ImageView
        android:id="@+id/list_icon"
        android:layout_width="?android:attr/listPreferredItemHeight"
        android:layout_height="?android:attr/listPreferredItemHeight"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="6dip"
        android:contentDescription="@string/photo_discriptor"
        android:src="@drawable/ic_launcher" 
        />

    <TextView
        android:id="@+id/list_auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/list_name"
        android:layout_toRightOf="@id/list_icon"
        android:gravity="center_vertical|left"
        android:text="@string/autowala_auto_number"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/list_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/list_auto"
        android:layout_alignRight="@+id/list_auto"
        android:layout_alignTop="@+id/list_icon"
        android:gravity="center_vertical|left"
        android:text="@string/autowala_name"
        android:textSize="16sp" />

</RelativeLayout> 